# docs/Aya-Akrabawi-api-server-online-store-0.1-swagger.json
@@ -1,167 +1,181 @@
 {
-  "openapi" : "3.0.1",
-  "info" : {
-    "title" : "defaultTitle",
-    "description" : "defaultDescription",
-    "version" : "0.1"
+  "openapi": "3.0.1",
+  "info": {
+    "title": "defaultTitle",
+    "description": "defaultDescription",
+    "version": "0.1"
   },
-  "servers" : [ {
-    "url" : "http://localhost:3000"
-  } ],
-  "paths" : {
-    "/categories/1" : {
-      "put" : {
-        "description" : "Auto generated using Swagger Inspector",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "type" : "object",
-                "properties" : {
-                  "name" : {
-                    "type" : "string"
+  "servers": [
+    {
+      "url": "http://localhost:3000"
+    }
+  ],
+  "paths": {
+    "/categories/1": {
+      "put": {
+        "description": "Auto generated using Swagger Inspector",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
                   },
-                  "description" : {
-                    "type" : "string"
+                  "description": {
+                    "type": "string"
                   },
-                  "id" : {
-                    "type" : "string"
+                  "id": {
+                    "type": "string"
                   },
-                  "display_name" : {
-                    "type" : "string"
+                  "display_name": {
+                    "type": "string"
                   }
                 }
               },
-              "examples" : {
-                "0" : {
-                  "value" : " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
+              "examples": {
+                "0": {
+                  "value": " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
                 },
-                "1" : {
-                  "value" : " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
+                "1": {
+                  "value": " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
                 },
-                "2" : {
-                  "value" : " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
+                "2": {
+                  "value": " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
                 }
               }
             }
           }
         },
-        "responses" : {
-          "200" : {
-            "description" : "Auto generated using Swagger Inspector",
-            "content" : {
-              "application/json; charset=utf-8" : {
-                "schema" : {
-                  "type" : "string"
+        "responses": {
+          "200": {
+            "description": "Auto generated using Swagger Inspector",
+            "content": {
+              "application/json; charset=utf-8": {
+                "schema": {
+                  "type": "string"
                 },
-                "examples" : { }
+                "examples": {}
               }
             }
           }
         },
-        "servers" : [ {
-          "url" : "http://localhost:3000"
-        } ]
+        "servers": [
+          {
+            "url": "http://localhost:3000"
+          }
+        ]
       },
-      "delete" : {
-        "description" : "Auto generated using Swagger Inspector",
-        "responses" : {
-          "200" : {
-            "description" : "Auto generated using Swagger Inspector",
-            "content" : {
-              "application/json; charset=utf-8" : {
-                "schema" : {
-                  "type" : "string"
+      "delete": {
+        "description": "Auto generated using Swagger Inspector",
+        "responses": {
+          "200": {
+            "description": "Auto generated using Swagger Inspector",
+            "content": {
+              "application/json; charset=utf-8": {
+                "schema": {
+                  "type": "string"
                 },
-                "examples" : { }
+                "examples": {}
               }
             }
           }
         },
-        "servers" : [ {
-          "url" : "http://localhost:3000"
-        } ]
+        "servers": [
+          {
+            "url": "http://localhost:3000"
+          }
+        ]
       },
-      "patch" : {
-        "description" : "Auto generated using Swagger Inspector",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "type" : "object",
-                "properties" : {
-                  "name" : {
-                    "type" : "string"
+      "patch": {
+        "description": "Auto generated using Swagger Inspector",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
                   },
-                  "description" : {
-                    "type" : "string"
+                  "description": {
+                    "type": "string"
                   },
-                  "id" : {
-                    "type" : "string"
+                  "id": {
+                    "type": "string"
                   },
-                  "display_name" : {
-                    "type" : "string"
+                  "display_name": {
+                    "type": "string"
                   }
                 }
               },
-              "examples" : {
-                "0" : {
-                  "value" : " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
+              "examples": {
+                "0": {
+                  "value": " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
                 },
-                "1" : {
-                  "value" : " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
+                "1": {
+                  "value": " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
                 },
-                "2" : {
-                  "value" : " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
+                "2": {
+                  "value": " {\r\n        \"id\": \"2\",\r\n        \"name\": \"laptops\",\r\n        \"display_name\": \"laptops\",\r\n        \"description\": \"category to let you buy anything for your laptop\"\r\n    }"
                 }
               }
             }
           }
         },
-        "responses" : {
-          "200" : {
-            "description" : "Auto generated using Swagger Inspector",
-            "content" : {
-              "application/json; charset=utf-8" : {
-                "schema" : {
-                  "type" : "string"
+        "responses": {
+          "200": {
+            "description": "Auto generated using Swagger Inspector",
+            "content": {
+              "application/json; charset=utf-8": {
+                "schema": {
+                  "type": "string"
                 },
-                "examples" : { }
+                "examples": {}
               }
             }
           }
         },
-        "servers" : [ {
-          "url" : "http://localhost:3000"
-        } ]
+        "servers": [
+          {
+            "url": "http://localhost:3000"
+          }
+        ]
       },
-      "servers" : [ {
-        "url" : "http://localhost:3000"
-      } ]
+      "servers": [
+        {
+          "url": "http://localhost:3000"
+        }
+      ]
     },
-    "/categories" : {
-      "get" : {
-        "description" : "Auto generated using Swagger Inspector",
-        "responses" : {
-          "200" : {
-            "description" : "Auto generated using Swagger Inspector",
-            "content" : {
-              "application/json; charset=utf-8" : {
-                "schema" : {
-                  "type" : "string"
+    "/categories": {
+      "get": {
+        "description": "Auto generated using Swagger Inspector",
+        "responses": {
+          "200": {
+            "description": "Auto generated using Swagger Inspector",
+            "content": {
+              "application/json; charset=utf-8": {
+                "schema": {
+                  "type": "string"
                 },
-                "examples" : { }
+                "examples": {}
               }
             }
           }
         },
-        "servers" : [ {
-          "url" : "http://localhost:3000"
-        } ]
+        "servers": [
+          {
+            "url": "http://localhost:3000"
+          }
+        ]
       },
-      "servers" : [ {
-        "url" : "http://localhost:3000"
-      } ]
+      "servers": [
+        {
+          "url": "http://localhost:3000"
+        }
+      ]
     }
   }
 }
